Fix alignment of quantity error msg on pdp

--- a/src/components/quantity/styles.scss
+++ b/src/components/quantity/styles.scss
@@ -63,6 +63,9 @@
     // left: 5px;
 }
 
+.left {
+    text-align: left;
+}
 .no-bottom {
     bottom: 0;
 }
